--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -13,31 +13,27 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
     
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    
+    - name: Log in to Azure Container Registry
+      uses: azure/docker-login@v1
       with:
-        python-version: '3.9'
+        login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
     
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Collect static files
-      run: |
-        python manage.py collectstatic --noinput
-      env:
-        SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        DEBUG: 'False'
-        ALLOWED_HOSTS: '.azurewebsites.net'
-    
-    - name: Create deployment package
-      run: |
-        zip -r deploy.zip . -x "*.git*" -x "*.github*" -x "*.venv*" -x "*__pycache__*" -x "*.pytest_cache*"
+    - name: Build and push container image to registry
+      uses: docker/build-push-action@v4
+      with:
+        push: true
+        tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/qp-app:${{ github.sha }}
+        file: ./Dockerfile
+        context: .
     
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./deploy.zip 
+        images: ${{ secrets.REGISTRY_LOGIN_SERVER }}/qp-app:${{ github.sha }} 
